# setup-environment-FedeBurgos

./: CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
src/: greetings.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
